<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/small_widget"
android:layout_width="fill_parent"
android:layout_height="match_parent"
android:baselineAligned="false"
android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/small_widget_background_color"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/blue_background">

        <RelativeLayout
            android:id="@+id/fajrLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fajr_label"
                style="@style/small_widget_time_label"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fajr"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/fajr_time"
                style="@style/small_widget_time_value"
                android:textSize="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/duhrLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/duhr_label"
                style="@style/small_widget_time_label"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duhr"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/duhr_time"
                style="@style/small_widget_time_value"
                android:textSize="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/asrLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"  >

            <TextView
                android:id="@+id/asr_label"
                style="@style/small_widget_time_label"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asr"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/asr_time"
                style="@style/small_widget_time_value"
                android:textSize="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/maghribLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/maghrib_label"
                style="@style/small_widget_time_label"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maghrib"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/maghrib_time"
                style="@style/small_widget_time_value"
                android:textSize="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ishaaLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ishaa_label"
                style="@style/small_widget_time_label"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ishaa"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/ishaa_time"
                style="@style/small_widget_time_value"
                android:textSize="13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>